--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
     <meta property="og:description" content="Descripció de la pàgina">
     <meta property="og:image" content="imatge.jpg">
     <meta property="og:url" content="https://www.exemple.com">
+    
 
     <title>Home</title>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <header>
+        <h1 class="text-3 font-bold underline">Hola</h1>
 
     </header>
     <main>
