--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Descripció de la pàgina">
     <meta property="og:image" content="imatge.jpg">
     <meta property="og:url" content="https://www.exemple.com">
-    
+
 
     <title>Home</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -25,10 +25,37 @@
 
 <body>
     <header>
-        <h1 class="text-3 font-bold underline">Hola</h1>
+        <div class="hero">
+            <div>
 
+                <h1>MURDOCH</h1>
+                <h2>BEACON OF SHADOWS</h2>
+                <button class="scroll-botton">Explorar</button>
+            </div>
+        </div>
     </header>
     <main>
+        <div class="main-grid" >
+            <div class="grid-content">
+                hola
+            </div>
+            <div class="grid-content">
+                hola
+            </div>
+            <div class="grid-content">
+                hola
+            </div>
+            <div class="grid-content">
+                hola
+            </div>
+            <div class="grid-content">
+                hola
+            </div>
+            <div class="grid-content">
+                hola
+            </div>
+        </div>
+        
 
     </main>
     <footer>
