--- a/index.html
+++ b/index.html
@@ -35,7 +35,43 @@
         </div>
     </header>
     <main>
-        <div class="main-grid" >
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">
+                            HISTORIA
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            MEDIA
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            DESCARGA
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            COMUNIDAD
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            CONTACTO
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            ABOUT US
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="main-grid">
             <div class="grid-content">
                 hola
             </div>
@@ -55,7 +91,7 @@
                 hola
             </div>
         </div>
-        
+
 
     </main>
     <footer>
