--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Home</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
