--- a/index.html
+++ b/index.html
@@ -39,32 +39,32 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a class="link" href="#">
                             HISTORIA
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="link" href="#">
                             MEDIA
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="link" href="#">
                             DESCARGA
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="link" href="#">
                             COMUNIDAD
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="link" href="#">
                             CONTACTO
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="link" href="#">
                             ABOUT US
                         </a>
                     </li>
@@ -72,6 +72,21 @@
             </nav>
         </div>
         <div class="main-grid">
+            <h3 class="index">
+                <a class="link" href="#">
+                    HISTORIA
+                </a>
+            </h3>
+            <h3 class="index">
+                <a class="link" href="#">
+                    MEDIA
+                </a>
+            </h3>
+            <h3 class="index">
+                <a class="link" href="#">
+                    DESCARGA
+                </a>
+            </h3>
             <div class="grid-content">
                 hola
             </div>
@@ -81,6 +96,21 @@
             <div class="grid-content">
                 hola
             </div>
+            <h3 class="index">
+                <a class="link" href="#">
+                    COMUNIDAD
+                </a>
+            </h3>
+            <h3 class="index">
+                <a class="link" href="#">
+                    CONTACTO
+                </a>
+            </h3>
+            <h3 class="index">
+                <a class="link" href="#">
+                    ABOUT US
+                </a>
+            </h3>
             <div class="grid-content">
                 hola
             </div>
@@ -91,6 +121,7 @@
                 hola
             </div>
         </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
     </main>
