--- a/index.html
+++ b/index.html
@@ -81,53 +81,53 @@
 
         <section> <!-- Cuadricula principal -->
             <div class="main-grid">
-                <h3 class="index">
+                <h6 class="index">
                     <a class="link" href="#">
                         HISTORIA
                     </a>
-                </h3>
-                <h3 class="index">
+                </h6>
+                <h6 class="index">
                     <a class="link" href="#">
                         MEDIA
                     </a>
-                </h3>
-                <h3 class="index">
+                </h6>
+                <h6 class="index">
                     <a class="link" href="#">
                         DESCARGA
                     </a>
-                </h3>
+                </h6>
                 <div class="grid-content">
-                    <img src="/resources/images/icono_faro.webp" alt="Imagen">
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
-                    <img src="/resources/images/icono_faro.webp" alt="Imagen">
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
-                    <img src="/resources/images/icono_faro.webp" alt="Imagen">
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
-                <h3 class="index">
+                <h6 class="index">
                     <a class="link" href="#">
                         COMUNIDAD
                     </a>
-                </h3>
-                <h3 class="index">
+                </h6>
+                <h6 class="index">
                     <a class="link" href="#">
                         CONTACTO
                     </a>
-                </h3>
-                <h3 class="index">
+                </h6>
+                <h6 class="index">
                     <a class="link" href="#">
                         ABOUT US
                     </a>
-                </h3>
+                </h6>
                 <div class="grid-content">
-                    <img src="/resources/images/icono_faro.webp" alt="Imagen">
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
-                    <img src="/resources/images/icono_faro.webp" alt="Imagen">
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
-                    <img src="/resources/images/icono_faro.webp" alt="Imagen">
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
             </div>
         </section>
