--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="descarga.html">
+                            <a class="link" href="descargas.html">
                                 DESCARGA
                             </a>
                         </li>
