--- a/index.html
+++ b/index.html
@@ -45,32 +45,32 @@
                 <nav>
                     <ul>
                         <li>
-                            <a class="link" href="#">
+                            <a class="link" href="historia.html">
                                 HISTORIA
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="#">
+                            <a class="link" href="media.html">
                                 MEDIA
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="#">
+                            <a class="link" href="descargas.html">
                                 DESCARGA
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="#">
+                            <a class="link" href="comunidad.html">
                                 COMUNIDAD
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="#">
+                            <a class="link" href="contacto.html">
                                 CONTACTO
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="#">
+                            <a class="link" href="about.html">
                                 ABOUT US
                             </a>
                         </li>
@@ -82,17 +82,17 @@
         <section> <!-- Cuadricula principal -->
             <div class="main-grid">
                 <h6 class="index">
-                    <a class="link" href="#">
+                    <a class="link" href="historia.html">
                         HISTORIA
                     </a>
                 </h6>
                 <h6 class="index">
-                    <a class="link" href="#">
+                    <a class="link" href="media.html">
                         MEDIA
                     </a>
                 </h6>
                 <h6 class="index">
-                    <a class="link" href="#">
+                    <a class="link" href="descargas.html">
                         DESCARGA
                     </a>
                 </h6>
@@ -106,17 +106,17 @@
                     <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <h6 class="index">
-                    <a class="link" href="#">
+                    <a class="link" href="comunidad.html">
                         COMUNIDAD
                     </a>
                 </h6>
                 <h6 class="index">
-                    <a class="link" href="#">
+                    <a class="link" href="contacto.html">
                         CONTACTO
                     </a>
                 </h6>
                 <h6 class="index">
-                    <a class="link" href="#">
+                    <a class="link" href="about.html">
                         ABOUT US
                     </a>
                 </h6>
