pagina comunidad a medias x2 fin clase

--- a/comunidad.html
+++ b/comunidad.html
@@ -34,6 +34,9 @@
         <div class="divderecho">
             <h2>Ranking</h2>
             <div class="ranking">
+                <ul class="rankingBox">
+                    <li class="user"></li>
+                </ul>
                 
         
             </div>
