--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -19,8 +19,8 @@
 
     <title>Contacto</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="CSS/variables.css">
     <link rel="stylesheet" href="CSS/contacto.css">
+    <link rel="stylesheet" href="CSS/variables.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <section> <!-- Navegacion -->
             <div class="nav">
                 <nav>
-                    <ul>
+                    <ul class="ulnav">
                         <li>
                             <a class="link" href="historia.html">
                                 HISTORIA
