--- a/descargas.html
+++ b/descargas.html
@@ -18,12 +18,53 @@
         <title>Formulario de contacto</title>
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
         <link rel="stylesheet" href="CSS/styledescargas.css">
+        <link rel="stylesheet" href="CSS/variables.css">
     </head>
 <body>
+    <header>
+        <section> <!-- Navegacion -->
+            <div class="nav">
+                <nav>
+                    <ul class="ulnav">
+                        <li>
+                            <a class="link" href="historia.html">
+                                HISTORIA
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link" href="media.html">
+                                MEDIA
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link" href="descargas.html">
+                                DESCARGA
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link" href="comunidad.html">
+                                COMUNIDAD
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link" href="contacto.html">
+                                CONTACTO
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link" href="about.html">
+                                ABOUT US
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+    </header>
     <div class="principal">
         <div class="divizquierdo">
             <h2>REQUISITOS</h2>
-            <ul>
+            <ul class="requisitos">
                 <li>* </li>
                 <li>* </li>
                 <li>* </li>
