--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Home</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/variables.css">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
         <section> <!-- Navegacion -->
             <div class="nav">
                 <nav>
-                    <ul>
+                    <ul class="ulnav">
                         <li>
                             <a class="link" href="historia.html">
                                 HISTORIA
