añadir paginas restantes
añadir paginas restantes  y insertar header y footer
TO DO: contenido paginas

--- a/descargas.html
+++ b/descargas.html
@@ -8,9 +8,9 @@
         en la que nuestro personaje tendrá que mantener el faro que corona la isla en 
         funcionamiento">
         <meta name="keywords" content="miedo, beacon, mantenlo prendido, monstruo">
-        <!-- Añadir palabras clave especificas -->
+       
         <meta name="author" content="Samuel Jiménez, Daniel Nevado, Alejandro avila">
-        <meta name="robots" content="index, robots"><!-- Añadir contenido de busqueda  -->
+        <meta name="robots" content="index, robots">
         <meta property="og:title" content="Formulario de contacto">
         <meta property="og:image" content="imatge.jpg">
         <meta property="og:url" content="https://www.murdochbeaconofshadows.com">
@@ -27,7 +27,7 @@
                 <nav>
                     <ul class="ulnav">
                         <li>
-                            <a class="link" href="historia.html">
+                            <a class="link" href="index.html">
                                 HISTORIA
                             </a>
                         </li>
@@ -118,6 +118,6 @@
         <div class="footer-bottom">
           ©  Murdoch Game. Todos los derechos reservados
         </div>
-      </footer>
+    </footer>
 </body>
 </html>
