link selected pestañas
diferenciar la pestaña en la que estamos

--- a/comunidad.html
+++ b/comunidad.html
@@ -41,7 +41,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="comunidad.html">
+                            <a class="link-selected" href="comunidad.html">
                                 COMUNIDAD
                             </a>
                         </li>
