--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
                 <nav>
                     <ul class="ulnav">
                         <li>
-                            <a class="link" href="historia.html">
+                            <a class="link" href="index.html">
                                 HISTORIA
                             </a>
                         </li>
@@ -50,7 +50,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="contacto.html">
+                            <a class="link-selected" href="contacto.html">
                                 CONTACTO
                             </a>
                         </li>
