--- a/descargas.html
+++ b/descargas.html
@@ -37,7 +37,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="descargas.html">
+                            <a class="link-selected" href="descargas.html">
                                 DESCARGA
                             </a>
                         </li>
