--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                 <nav>
                     <ul class="ulnav">
                         <li>
-                            <a class="link" href="index.html">
+                            <a class="link-selected
+                            
+                            
+                            " href="index.html">
                                 HISTORIA
                             </a>
                         </li>
