--- a/media.html
+++ b/media.html
@@ -18,7 +18,7 @@
 
     <title>Media</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    
     <link rel="stylesheet" href="CSS/variables.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="media.html">
+                            <a class="link-selected" href="media.html">
                                 MEDIA
                             </a>
                         </li>
