--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="about.html">
+                            <a class="link-selected" href="about.html">
                                 ABOUT US
                             </a>
                         </li>
@@ -64,7 +64,7 @@
     </header>
 
 
-    
+
 
     <footer class="footer">
         <div class="footer-container">
