arreglo grid principal index
he juntado cada imagen con su enlace, asi sera mas facil responsive

--- a/index.html
+++ b/index.html
@@ -81,52 +81,56 @@
 
         <section> <!-- Cuadricula principal -->
             <div class="main-grid">
-                <h6 class="index">
-                    <a class="link" href="historia.html">
-                        HISTORIA
-                    </a>
-                </h6>
-                <h6 class="index">
-                    <a class="link" href="media.html">
-                        MEDIA
-                    </a>
-                </h6>
-                <h6 class="index">
-                    <a class="link" href="descargas.html">
-                        DESCARGA
-                    </a>
-                </h6>
+
                 <div class="grid-content">
+                    <h6 class="index">
+                        <a class="link" href="index.html">
+                            HISTORIA
+                        </a>
+                    </h6>
                     <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
+                    <h6 class="index">
+                        <a class="link" href="media.html">
+                            MEDIA
+                        </a>
+                    </h6>
                     <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
+                    <h6 class="index">
+                        <a class="link" href="descargas.html">
+                            DESCARGA
+                        </a>
+                    </h6>
                     <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
-                <h6 class="index">
-                    <a class="link" href="comunidad.html">
-                        COMUNIDAD
-                    </a>
-                </h6>
-                <h6 class="index">
-                    <a class="link" href="contacto.html">
-                        CONTACTO
-                    </a>
-                </h6>
-                <h6 class="index">
-                    <a class="link" href="about.html">
-                        ABOUT US
-                    </a>
-                </h6>
+
+
+
                 <div class="grid-content">
-                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
-                </div>
-                <div class="grid-content">
+                    <h6 class="index">
+                        <a class="link" href="comunidad.html">
+                            COMUNIDAD
+                        </a>
+                    </h6>
                     <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
                 <div class="grid-content">
+                    <h6 class="index">
+                        <a class="link" href="contacto.html">
+                            CONTACTO
+                        </a>
+                    </h6>
+                    <img src="../resources/images/icono_faro.webp" alt="Imagen">
+                </div>
+                <div class="grid-content">
+                    <h6 class="index">
+                        <a class="link" href="about.html">
+                            ABOUT US
+                        </a>
+                    </h6>
                     <img src="../resources/images/icono_faro.webp" alt="Imagen">
                 </div>
             </div>
