--- a/comunidad.html
+++ b/comunidad.html
@@ -100,7 +100,7 @@
           <div >
             <h3 class="footer-title">Equipo</h3>
             <ul class="footer-list">
-              <li>Alejandro Rios – Desarrollo del videojuego</li>
+              <li>Alejandro avila – Desarrollo del videojuego</li>
               <li>Daniel Nevado– Desarrollo web</li>
               <li>Samuel Jimenez – Desarrollo web</li>
             </ul>
