--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
           <div >
             <h3 class="footer-title">Equipo</h3>
             <ul class="footer-list">
-              <li>Alejandro Rios – Desarrollo del videojuego</li>
+              <li>Alejandro Avila – Desarrollo del videojuego</li>
               <li>Daniel Nevado– Desarrollo web</li>
               <li>Samuel Jimenez – Desarrollo web</li>
             </ul>
