--- a/media.html
+++ b/media.html
@@ -23,6 +23,51 @@
 </head>
 <body>
     <header>
+        <section id="h-header">
+            <div class="h-nav">
+              <nav>
+                <!-- hamburguesa -->
+                <button class="menu-toggle" aria-label="abrir menu">
+                  <span class="bar"></span>
+                  <span class="bar"></span>
+                  <span class="bar"></span>
+                </button>
+          
+                <ul class="h-ulnav">
+                    <li>
+                        <a class="h-link" href="index.html">
+                            HISTORIA
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h-link" href="media.html">
+                            MEDIA
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h-link" href="descargas.html">
+                            DESCARGA
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h-link" href="comunidad.html">
+                            COMUNIDAD
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h-link" href="contacto.html">
+                            CONTACTO
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h-link-selected" href="about.html">
+                            ABOUT US
+                        </a>
+                    </li>
+                </ul>
+              </nav>
+            </div>
+        </section>
         <section> <!-- Navegacion -->
             <div class="nav">
                 <nav>
@@ -101,5 +146,7 @@
           ©  Murdoch Game. Todos los derechos reservados
         </div>
     </footer>
+    <script src="JavaScript/ScrollButton.js"></script>
+
 </body>
 </html>
