comenzando fetch() y demas

--- a/comunidad.html
+++ b/comunidad.html
@@ -13,6 +13,7 @@
         <meta property="og:title" content="Formulario de contacto">
         <meta property="og:image" content="imatge.jpg">
         <meta property="og:url" content="https://www.murdochbeaconofshadows.com">
+        <script type="module" src="./JavaScript/index.js"></script>
     
         <title>Comunidad</title>
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -110,10 +111,8 @@
         <div class="divizquierdo">
             <h2>COMENTARIOS</h2>
                 <div class="comentarios">
-                    <div class="comentario">
-                        <div class="usuario">usuario</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium tempora laudantium suscipit et eveniet necessitatibus, 
-                        cupiditate consectetur alias voluptate molestias.</p>
+                    <div id="comentario">
+
                     </div>
                 </div>
         </div>
