--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <h2>No caigas en la oscuridad</h2>
                 <p>Únete a la aventura en Murdoch, una isla repleta de misterios</p>
                 <div class="trailer">
-                    <video src="#trailer">
+                    <video src="resources/images/trailer.mp4"  autoplay muted loop playsinline>
                         <!-- Trailer -->
                     </video>
                 </div>
