formulario comentarios prueba

--- a/comunidad.html
+++ b/comunidad.html
@@ -109,6 +109,11 @@
 
     <div class="principal">
         <div class="divizquierdo">
+            <div id="formulari-comentari">
+                <input type="text" id="nomUsuari" placeholder="El teu nom" required>
+                <textarea id="textComentari" placeholder="Escriu el teu comentari" required></textarea>
+                <button id="enviarComentari">Enviar</button>
+            </div>
             <h2>COMENTARIOS</h2>
                 <div class="comentarios">
                     <div id="comentario">
