--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
     <title>Home</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/about.css">
     <link rel="stylesheet" href="CSS/variables.css">
 </head>
 <body>
@@ -107,6 +107,37 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="participantes">
+            <div class="carta">
+                <div class="foto">
+                    <img src="resources/images/Samuel.jpg" alt="perfil">
+                </div>
+                <div class="texto">
+                    <h5>Samuel</h5>
+                    <p>desarrollo Web</p>
+                </div>
+            </div>
+            <div class="carta">
+                <div class="foto">
+                    <img src="resources/images/Alejandro.jpg" alt="perfil">
+                </div>
+                <div class="texto">
+                    <h5>Alejandro</h5>
+                    <p>desarrollo web</p>
+                </div>
+            </div>
+            <div class="carta">
+                <div class="foto">
+                    <img src="resources/images/Daniel.png" alt="perfil">
+                </div>
+                <div class="texto">
+                    <h5>Daniel</h5>
+                    <p>desarrollo Web</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
