--- a/comunidad.html
+++ b/comunidad.html
@@ -125,9 +125,9 @@
         <div class="divderecho">
             <h2>Ranking</h2>
             <div class="ranking">
-                <ul id="rankingBox">
-
-                </ul>
+                <div id="rankingBox">
+                    
+                </div>
 
 
             </div>
