--- a/media.html
+++ b/media.html
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="h-link" href="media.html">
+                        <a class="h-link-selected" href="media.html">
                             MEDIA
                         </a>
                     </li>
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="h-link-selected" href="about.html">
+                        <a class="h-link" href="about.html">
                             ABOUT US
                         </a>
                     </li>
