--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <meta property="og:url" content="https://www.exemple.com">
 
 
-    <title>Home</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <title>Murdoch</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/variables.css">
 </head>
@@ -296,5 +295,7 @@
         </div>
     </footer>
     <script src="JavaScript/ScrollButton.js"></script>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
 </body>
 </html>
