--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,6 @@
 
 
     <title>Contacto</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="CSS/contacto.css">
     <link rel="stylesheet" href="CSS/variables.css">
 </head>
@@ -166,7 +165,8 @@
       </footer>
       
       <script src="JavaScript/ScrollButton.js"></script>
-
+      <script src="JavaScript/index.js"></script>
+      <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 </body>
 
