--- a/descargas.html
+++ b/descargas.html
@@ -16,8 +16,7 @@
     <meta property="og:image" content="imatge.jpg">
     <meta property="og:url" content="https://www.murdochbeaconofshadows.com">
 
-    <title>Formulario de contacto</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <title>Descarga Murdoch</title>
     <link rel="stylesheet" href="CSS/styledescargas.css">
     <link rel="stylesheet" href="CSS/variables.css">
 </head>
@@ -180,7 +179,9 @@
             © Murdoch itchioLogo los derechos reservados
         </div>
     </footer>
+    <script src="JavaScript/index.js"></script>
     <script src="JavaScript/ScrollButton.js"></script>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 </body>
 
