index finalizado y un poco de media
index animado y media a medias

--- a/media.html
+++ b/media.html
@@ -17,7 +17,7 @@
 
 
     <title>Media</title>
-    
+    <link rel="stylesheet" href="CSS/media.css">
     <link rel="stylesheet" href="CSS/variables.css">
 </head>
 <body>
@@ -106,7 +106,25 @@
             </div>
         </section>
     </header>
-
+    <section> <!-- Cuadricula principal -->
+        <div class="main-grid">
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_ocean.webp"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/barca.jpeg"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/barca2.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/contraluz.jpg"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/dientes.webp"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+            <div class="grid-content"><img src="resources/images/background_hero.png"  width="100%" alt="imagen"></div>
+        </div>
     <footer class="footer">
         <div class="footer-container">
           
