--- a/media.html
+++ b/media.html
@@ -172,7 +172,7 @@
         </div>
     </footer>
     <script src="JavaScript/ScrollButton.js"></script>
-    <script src="index.html"></script>
+    <script src="JavaScript/index.js" type="module"></script>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 </body>
