--- a/descargas.html
+++ b/descargas.html
@@ -153,8 +153,8 @@
                 <li>Sistema operativo: Windows 7/8/10</li>
                 <li>Procesador: Intel Core i3 o equivalente</li>
                 <li>Memoria: 8 GB de RAM</li>
-                <li>Graficos: NVIDIA GTX 730 / AMD Radeon R7 260</li>
-                <li>Almacenamiento: 2 GB de espacio disponible</li>
+                <li>Graficos: integrados basicos</li>
+                <li>Almacenamiento: 1 GB de espacio disponible</li>
             </ul>
         </div>
         <div class="trailer" id="cuatro">
