arreglar fuente caracteres

--- a/comunidad.html
+++ b/comunidad.html
@@ -133,8 +133,8 @@
         <div class="divizquierdo" id="uno">
             <h2>COMENTARIOS</h2>
             <div id="formulari-comentari">
-                <input type="text" id="nomUsuari" placeholder="El teu nom" required>
-                <textarea id="textComentari" placeholder="Escriu el teu comentari" required></textarea>
+                <input type="text" id="nomUsuari" placeholder="Tu nombre" required>
+                <textarea id="textComentari" placeholder="Escribe tu comentario" required></textarea>
                 <button id="enviarComentari">Enviar</button>
             </div>
             <div class="comentarios" id="dos">
